Fix overflow behavior of body

--- a/styles/global.css
+++ b/styles/global.css
@@ -21,6 +21,7 @@
 body {
     position: relative;
     font-family: 'Itim';
+    overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, ul, p {
